<resources>
    <string name="app_name">Books Inventory</string>

    <string name="genre_unknown">Unknown Genre</string>
    <string name="genre_scifi">Scifi</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_comedy">Comedy</string>
    <string name="editor_add_book">Add a Book</string>
    <string name="editor_edit_book">Edit Book</string>
    <string name="editor_add_book_error">Error saving book</string>
    <string name="editor_add_book_ok">Book saved</string>
    <string name="editor_update_book_ok">Book updated</string>
    <string name="editor_update_book_error">Update book error</string>
    <string name="menu_insert_dummy_data">Insert dummy data</string>
    <string name="menu_delete_all_books">Delete all books</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="editor_del_book_ok">Book deleted</string>
    <string name="editor_del_book_error">Error deleting book</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="question_delete_book">Delete this book?</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="question_discard_book_changes">Discard changes and quit editing?</string>
    <string name="empty_book_message">Do you want to add some books today?</string>
    <string name="empty_book_suggestion">Click the plus sign to begin!</string>
    <string name="cents">Cents</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="book_name">Book name</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="book_not_on_stock">Book is not on stock!</string>
    <string name="supplier_no_contact">Supplier has no contact!</string>
    <string name="no_change">No changes detected!</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="continue_question">Do you want to continue?</string>
    <string name="book_empty_msg">Book name field is empty!</string>
    <string name="supplier_empty_msg">Supplier field is empty!</string>
    <string name="supplier_phone_empty_msg">Supplier phone field is empty!</string>
    <string name="allow_all_empty_question">Allow Price and Quantity fields to have 0 as value?</string>
    <string name="allow_price_empty_question">Allow Price field to have 0 as value?</string>
    <string name="allow_quantity_empty_question">Allow Quantity field to have 0 as value?</string>
</resources>
