<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/title"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/delete_book"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:onClick="removeBook"
                android:background="@drawable/ic_delete"
                android:text="" />

        </RelativeLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/genre"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/quantity"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/sub_qty"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:onClick="subOneQty"
                android:background="@drawable/ic_action_minus"
                android:text="" />

            <EditText
                android:id="@+id/edit_book_quantity"
                android:hint="@string/quantity"
                android:inputType="number"
                android:gravity="center"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/add_qty"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_action_add"
                android:onClick="addOneQty"
                android:text="" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/price"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_price_unit"
                android:text="@string/cents"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/supplier"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text=""
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/phone_supplier"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_call"
                android:onClick="callSupplier"
                android:text="" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
